<resources>
    <string name="app_name">Pilem</string>
    <string name="author_mail">email.ramadani@gmail.com</string>
    <string name="github_url">https://github.com/ramadani/pilem</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_now_playing">Now Playing</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_top_rated">Top Rated</string>

    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="production_companies">Production Companies</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text</string>
    <string name="lorem_ipsum_num">8.4</string>
    <string name="lorem_ipsum_long">Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. lorem_ipsum_long. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
</resources>
