<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/nav_now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/nav_upcoming" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/nav_popular" />
        <item
            android:id="@+id/nav_top_rated"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/nav_top_rated" />
    </group>
</menu>
