<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/item_pading">

    <ImageView
        android:id="@+id/iv_movie_poster"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@mipmap/yourname"/>

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_movie_poster"
        android:paddingLeft="@dimen/item_pading"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/lorem_ipsum"/>

    <TextView
        android:id="@+id/tv_movie_vote_avg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_movie_title"
        android:layout_toRightOf="@+id/iv_movie_poster"
        android:paddingLeft="@dimen/item_pading"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/lorem_ipsum_num"/>

    <TextView
        android:id="@+id/tv_movie_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_movie_vote_avg"
        android:layout_toRightOf="@+id/iv_movie_poster"
        android:paddingLeft="@dimen/item_pading"
        android:text="@string/lorem_ipsum_long"/>
</RelativeLayout>